--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dubizzle Property Sales</title>
+    <link rel="stylesheet" href="./src/theme.css"> <!-- Add this line -->
   </head>
-  <body class="bg-white dark:bg-[#202124] font-roboto">
-    <div id="root"></div>
+  <body class="bg-gray-800 text-grey-dark font-roboto">
+    <div id="root" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
