Rename to Maskan

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dubizzle Property Sales</title>
+    <title>Maskan Property Sales</title>
     <link rel="stylesheet" href="./src/theme.css"> <!-- Add this line -->
   </head>
   <body class="bg-gray-800 text-grey-dark font-roboto">
