Update Banner heading

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="stylesheet" href="https://use.typekit.net/xyz123.css"> <!-- Example link from Adobe Fonts -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maskan Property Sales</title>
     <link rel="stylesheet" href="./src/theme.css"> <!-- Add this line -->
