--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <link rel="stylesheet" href="https://use.typekit.net/xyz123.css"> <!-- Example link from Adobe Fonts -->
+    <link rel="stylesheet" href="https://your-font-source.com/cofo-sans.css"> <!-- Add the correct font link here -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maskan Property Sales</title>
     <link rel="stylesheet" href="./src/theme.css"> <!-- Add this line -->
   </head>
-  <body class="bg-gray-800 text-grey-dark font-roboto">
-    <div id="root" ></div>
+  <body class="bg-gray-800 text-grey-dark font-cofo-sans">
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
