--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.jpeg" />
     <link rel="stylesheet" href="https://your-font-source.com/cofo-sans.css"> <!-- Add the correct font link here -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Investibayt Property Sales</title>
+    <title>InvestiBayt Property Sales</title>
     <link rel="stylesheet" href="./src/theme.css"> <!-- Add this line -->
   </head>
   <body class="bg-gray-800 text-grey-dark font-cofo-sans">
