add meta tags in website for SEO

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="https://your-font-source.com/cofo-sans.css"> <!-- Add the correct font link here -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>InvestiBayt Property Sales</title>
+    
+    <!-- Meta Description for SEO -->
+    <meta name="description" content="InvestiBayt is the ultimate platform for buying, selling, and renting properties in the UAE. Discover the latest ready-to-move-in homes and off-plan projects with detailed information, all in one place.">
+
     <link rel="stylesheet" href="./src/theme.css"> <!-- Add this line -->
   </head>
   <body class="bg-gray-800 text-grey-dark font-cofo-sans">
