--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.jpeg" />
     
     <!-- Import Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Impact&family=Josefin+Sans:wght@300..800&family=Open+Sans:wght@300..800&family=Parkinsans:wght@300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Lato:wght@300..800&display=swap" rel="stylesheet">
     
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>InvestiBayt Property Sales</title>
