--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <link rel="stylesheet" href="./src/theme.css"> <!-- Your custom styles -->
   </head>
-  <body class="bg-cream text-grey-dark">
+  <body class="bg-gray-800 text-grey-dark">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-</body>
+  </body>
 </html>
