update propertyDetails design

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="./src/theme.css"> <!-- Your custom styles -->
   </head>
-  <body class="bg-gray-800 text-grey-dark">
+  <body class="bg-primary text-primary">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
